bin/testsuite/tests/compiler/src/errors/compiler5586.swg
#global testerror "Err0103"

//#include <stdio.h>

func main()->int
{
    // printf() displays the string inside quotation
    printf("Hello, World!")
    return 0
}
